--- a/assets-frontpage/sass/libs/_vars.scss
+++ b/assets-frontpage/sass/libs/_vars.scss
@@ -39,16 +39,16 @@
 		border2:			rgba(255,255,255,0.25),
 
 		accent: (
-			bg:				#f44265,
-			fg:				mix(#f44265, #ffffff, 25%),
+			bg:				#76ac33,
+			fg:				mix(#76ac33, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#f44265, #ffffff, 40%),
+			fg-light:		mix(#76ac33, #ffffff, 40%),
 			border:			rgba(255,255,255,0.25),
 			border-bg:		rgba(255,255,255,0.075),
 		),
 
 		positive: (
-			bg:				#f44265,
+			bg:				#76ac33,
 			fg:				#ffffff
 		),
 
